--- a/src/header.scss
+++ b/src/header.scss
@@ -1,10 +1,26 @@
 .header2{
+    height:10rem;
+    display: flex;
+    justify-content: space-between;
     background-color:lightslategray;
     color: white;
 
-    &__items{
+    &__left{
+        color: whitesmoke;
+
+        &__title{
+            color: whitesmoke;
+        }
+    }
+
+    &__right{
         display: flex;
         justify-content: space-between;
+        color: whitesmoke;
+
+        &__items{
+            color:whitesmoke;
+        }
     }
     
 }
