--- a/src/projects.scss
+++ b/src/projects.scss
@@ -1,10 +1,9 @@
 .projects{
-    height: 120rem;
-    background-color: lightness($color:blue);
-
+    
+    
     &__item1{
         height:40rem;
-        background-color:lightyellow;
+        background-color:whitesmoke;
 
     }
 
